--- a/templates/courses/index.html.twig
+++ b/templates/courses/index.html.twig
@@ -1,25 +1,47 @@
-<h1>What's new</h1>
+{% extends 'base.html.twig' %}
 
-<a href="/courses/create">
-            Create new
-        </a>
 
-{% for course in courses %}
-    <div>
-        <img
-            src="{{ course.ImagePath }}"
-            alt=""
-        />
-        <h2>
-            {{ course.name }}
-        </h2>
+    {% block title %}Courses{% endblock %}
 
-        <p>
-            {{ course.Description }}
-        </p>
+{% block body %}
 
-        <a href="/courses/show/{{ course.id }}">
-            Show me
-        </a>
-    </div>
-{% endfor %}
+    {% if app.user %}
+        <div class="mb-3">
+            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+        </div>
+    {% else %}
+        <div class="mb-3">
+           Login to get access to many features, <a href="{{ path('app_login') }}">Login</a> | <a href="{{ path('app_register') }}">Register</a>
+        </div>
+    {% endif %}
+
+    <h1>What's new</h1>
+
+    {% if app.user %}
+    <a href="/courses/create">
+                Create new
+            </a>
+    {% endif %}
+
+    {% for course in courses %}
+        <div>
+            <img
+                width = 200px
+                src="{{ course.ImagePath }}"
+                alt=""
+            />
+            <h2>
+                {{ course.name }}
+            </h2>
+
+            <p>
+                {{ course.Description }}
+            </p>
+
+            <a href="/courses/show/{{ course.id }}">
+                Show me
+            </a>
+        </div>
+    {% endfor %}
+
+{% endblock %}
