--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -4,33 +4,6 @@
 
 {% block body %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% else %}
-        <div class="mb-3">
-           Login to get access to many features, <a href="{{ path('app_login') }}">Login</a> | <a href="{{ path('app_register') }}">Register</a>
-        </div>
-    {% endif %}
-
-    {% if app.user %}
-    <p>
-    <a href="{{ path('create_course') }}">
-                Create new course
-            </a>
-    <a href="/episodes">
-                Episodes
-            </a>
-    <a href="/categories">
-                Categoreis
-            </a>
-    </p>
-    {% endif %}
-
-    <br>
-    <hr>
-    <br>
 
     <h1>Kategorie</h1>
 
@@ -42,7 +15,24 @@
         </button>
         {{ form_end(form) }}
 
+    {% if app.user %}
+        <div class="mb-3">
+            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+        </div>
+    {% else %}
+        <div class="mb-3">
+           Login to get access to many features, <a href="{{ path('app_login') }}">Login</a> | <a href="{{ path('app_register') }}">Register</a>
+        </div>
+    {% endif %}
+
     <h1>What's new</h1>
+
+    {% if app.user %}
+    <a href="/courses/create">
+                Create new
+            </a>
+    {% endif %}
+
     {% for course in courses %}
         <div>
             <img
