--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,3 +1,7 @@
+{% extends 'security_registration.html.twig' %}
+{% block title %}Register{% endblock %}
+
+{% block body %}
 <h1>Hi! Please confirm your email!</h1>
 
 <p>
@@ -9,3 +13,5 @@
 <p>
     Cheers!
 </p>
+
+{% endblock %}
