--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,5 +1,4 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'security_registration.html.twig' %}
 {% block title %}Register{% endblock %}
 
 {% block body %}
