--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'security_registration.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
 
@@ -23,7 +23,7 @@
         <input type="hidden" name="_csrf_token"
                value="{{ csrf_token('authenticate') }}"
         >
-
+        <p><a href="{{path("app_forgot_password_request")}}">Forgot password?</a></p>
         {#
             Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
             See https://symfony.com/doc/current/security/remember_me.html
