--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -21,13 +21,12 @@ body {
 .navbar {
     width: 100%;
     height: 6em;
-    background-color: var(--lightblue);
+    background-color: var(--white);
     color: var(--navy);
     margin: 0px;
     display: flex;
     justify-content:space-between;
-    border-bottom: var(--brightblue);
-    border-bottom-style: solid;
+    border-bottom: 1px solid var(--navy);
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.199);
 }
 
@@ -71,7 +70,7 @@ body {
 }
 
 .dropdown-button {
-    background-color: var(--lightblue);
+    background-color: var(--white);
     border: none;
     cursor: pointer;
     transition: color 0.3s;
@@ -286,8 +285,13 @@ body {
     padding: 5px 12px;
     color: #fff;
     margin-left: -1px;
-    border: 1px solid transparent;
     line-height: 1.5;
+}
+
+.pagination img{
+    width: 100%;
+    height: 20px;
+    object-fit: cover; 
 }
 
 .pagination a.active {
@@ -311,8 +315,8 @@ body {
 }
 
 .modal-1 a {
-    border-color: #ddd;
-    color: #4285F4;
+    border-color: var(--navy);
+    color: var(--brightblue);
     background: #fff;
 }
 
@@ -321,8 +325,7 @@ body {
 }
 
 .modal-1 a.active, .modal-1 a:active {
-    border-color: #4285F4;
-    background: #4285F4;
+    background: var(--navy);
     color: #fff;
 }
 
@@ -330,3 +333,4 @@ body {
     display: flex;
     justify-content: center;
 }
+
