--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -13,33 +13,119 @@
     width: 100%;
 }
 .course-list-title{
-    margin-left: 2%;
+    margin-top: 3em;
+    margin-left: 5%;
+    padding-left: 10%;
+    text-shadow: -9px 3px 35px rgba(66, 68, 90, 1);
 }
+
 .courses-list{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    width: 80%;
-    border-bottom: var(--brightblue);
-    border-bottom-style: solid;
-    border-left: var(--brightblue);
-    border-left-style: solid;
+    width: 70%;
+    border-left: 1px solid var(--navy);
+    border-bottom: 1px solid var(--navy);
     box-shadow: -20px 20px 20px rgba(0, 0, 0, 0.199);
+    margin-bottom: 5em;
+    margin-top: 2em;
 }
-
+.courses-list-element-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .courses-list-element {
     display: flex;
     align-items: center;
-    background-color: white;
+    justify-content: space-between;
+    background-color: var(--white);
+    cursor: pointer;
     font-size: 1em;
+    margin: 2em;
     width: 80%;
-    margin: 2rem;
-    padding: 2rem;
-    border-bottom: var(--brightblue);
-    border-bottom-style: solid;
+    min-height: 200px;
+    border-bottom: 1px solid var(--navy);
 }
 
-.course-list-title{
-    padding-left: 10%;
+.courses-list-element:hover{
+    background-color: var(--lightblue);
+    -webkit-transition: background 0.3s ease-out;
+    -moz-transition: background 0.3s ease-out;
+    -ms-transition: background 0.3s ease-out;
+    -o-transition: background 0.3s ease-out;
+    transition: background 0.3s ease-out;
+}
+
+.courses-list-element-details-section {
+    padding-left: 5%;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-content: center;
+}
+
+.courses-list-element-details-section p { 
+    overflow: hidden; /* Ukrywa tekst, który nie mieści się w kontenerze */
+    text-overflow: ellipsis; /* Dodaje wielokropek na końcu */
+    max-height: 50px;
+}
+
+.courses-list-element-price-section{
+    width: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    background-color: transparent;
+}
+
+.courses-list-element-image-section{
+    display: flex;
+    width: 25%;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 100%;
+    overflow: hidden;
+}
+
+.courses-list-element-image-section img{
+    width: 100%;
+    height: auto;
+    object-fit: cover; 
+}
+
+.courses-list-element-price-section .sliding-button{
+    margin: 2em;
+}
+
+.courses-list-element-details-section-rating {
+    display: flex;
+    align-items: center;
+}
+
+.star-container{
+    margin-right: 10px;
+}
+
+.star {
+    font-size: 20px; 
+    color: #666;
+}
+
+.star.filled {
+    color: #ffa723;
+}
+
+.courses-list-element-details-section-createdby{
+    margin-top: 2%;
+    margin-bottom: 5%;
 }
