--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,13 +74,13 @@
                         </div>
 
                         <div class="navbar-item">
-                            <a href="#">
+                            <a href="{{path('cart_show')}}">
                                 <button class="sliding-button">
                                     <div class="sliding-button-sign">
                                         <img src="/icons/cart.svg" alt="cart">
                                     </div>
                                     <div class="sliding-button-text">Cart</div>
-                                    <div class="cart-counter">
+                                    <div class="cart-counter-container">
                                         <turbo-frame id="cart">
                                             <div id="cart-counter">
                                                 {{ productsInCartIds|length }}
