--- a/templates/courses/index.html.twig
+++ b/templates/courses/index.html.twig
@@ -48,14 +48,15 @@
                                         {{course.price}} $
                                     </div>
                                     <div>
-                                        <form action="{{ path('add_to_cart', {courseId: course.id}) }}" method="POST" data-turbo-frame="cart">
+                                        <form action="{{ path('add_to_cart', {courseId: course.id}) }}" method="POST"id="button-content-{{ course.id }}">
                                             <button type="submit"
+                                                    
                                                     class="add-to-cart sliding-button"
                                                     onclick="event.stopPropagation();" 
-                                                    data-product-id="{{ course.id }}"
                                                     {% if productsInCartIds and course.id in productsInCartIds %} disabled{% endif %}>
                                                 {% if productsInCartIds and course.id in productsInCartIds %}
-                                                    In cart
+                                                    <div class="sliding-button-sign"><img src="/icons/cart-full.svg" alt="in-cart"></div>
+                                                    <div class="sliding-button-text">In&nbsp;cart</div>
                                                 {% else %}
                                                     <div class="sliding-button-sign"><img src="/icons/cart.svg" alt="add-to-cart"></div>
                                                     <div class="sliding-button-text">Add&nbsp;to&nbsp;cart</div>
@@ -80,7 +81,7 @@
         </div>
 
     </div>
-    
+{#     
 <script>
 
     document.addEventListener("turbo:submit-end", (event) => {
@@ -105,7 +106,7 @@
     });
 
 
-</script>
+</script> #}
 
 
 {% endblock %}
